manifests/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-pytorchjob
  failurePolicy: Fail
  name: vpytorchjob.kb.io
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pytorchjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubeflow-org-v1-tfjob
  failurePolicy: Fail
  name: vtfjob.kb.io
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tfjobs
  sideEffects: None
