manifests/base/webhook/validatingwebhookconfiguration.yaml
# Source: kubeflow-trainer/templates/webhook/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubeflow-trainer-validating-webhook
  labels:
    helm.sh/chart: kubeflow-trainer-2.0.0
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: kubeflow-trainer
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: webhook
webhooks:
  - name: validator.clustertrainingruntime.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-service
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-clustertrainingruntime
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - clustertrainingruntimes
        operations:
          - CREATE
          - UPDATE
  - name: validator.trainingruntime.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-service
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-trainingruntime
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - trainingruntimes
        operations:
          - CREATE
          - UPDATE
  - name: validator.trainjob.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-service
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-trainjob
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - trainjobs
        operations:
          - CREATE
          - UPDATE
